--- a/project.yml
+++ b/project.yml
@@ -5,7 +5,7 @@ options:
     iOS: "26.0"
 settings:
   SWIFT_VERSION: "6.2"
-  DEVELOPMENT_TEAM: ""
+  DEVELOPMENT_TEAM: "8U7J5S7RGC"
 packages: {}
 targets:
   Wordsmoke:
