Persist these settings when using xcodegen, so we stop losing them

--- a/project.yml
+++ b/project.yml
@@ -9,6 +9,7 @@ settings:
   ENABLE_USER_SCRIPT_SANDBOXING: YES
   ASSETCATALOG_COMPILER_GENERATE_SWIFT_ASSET_SYMBOL_EXTENSIONS: YES
   SWIFT_GENERATE_STRINGS_FILE: YES
+  STRING_CATALOG_GENERATE_SYMBOLS: YES
 packages:
   Amplitude-Swift:
     url: https://github.com/amplitude/Amplitude-Swift
@@ -37,6 +38,7 @@ targets:
           - UIInterfaceOrientationPortraitUpsideDown
           - UIInterfaceOrientationLandscapeLeft
           - UIInterfaceOrientationLandscapeRight
+        ITSAppUsesNonExemptEncryption: false
     scheme:
       testTargets:
         - WordsmokeTests
