Overhaul of the matchmaking process. Simulator debug and production game center now share an invite flow.

--- a/Wordsmoke.xcodeproj/xcshareddata/xcschemes/Wordsmoke.xcscheme
+++ b/Wordsmoke.xcodeproj/xcshareddata/xcschemes/Wordsmoke.xcscheme
@@ -85,8 +85,13 @@
             ReferencedContainer = "container:Wordsmoke.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <CommandLineArguments>
-      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "WORDSMOKE_DEBUG_MATCHMAKING_TOKEN"
+            value = "ihsdfs8"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
