--- a/Wordsmoke/Info.plist
+++ b/Wordsmoke/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSGKFriendListUsageDescription</key>
+	<string>Wordsmoke uses your Game Center friends list to let you invite people you know.</string>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UISupportedInterfaceOrientations</key>
