--- a/project.yml
+++ b/project.yml
@@ -14,14 +14,20 @@ packages:
   Amplitude-Swift:
     url: https://github.com/amplitude/Amplitude-Swift
     branch: main
+  sentry-cocoa:
+    url: https://github.com/getsentry/sentry-cocoa/
+    from: 8.0.0
 targets:
   Wordsmoke:
     type: application
     platform: iOS
     sources: [Wordsmoke]
     settings:
-      PRODUCT_BUNDLE_IDENTIFIER: org.akuaku.playwordsmoke
-      CODE_SIGN_ENTITLEMENTS: Wordsmoke/Wordsmoke.entitlements
+      base:
+        PRODUCT_BUNDLE_IDENTIFIER: org.akuaku.playwordsmoke
+        CODE_SIGN_ENTITLEMENTS: Wordsmoke/Wordsmoke.entitlements
+        DEBUG_INFORMATION_FORMAT: dwarf-with-dsym
+        ENABLE_USER_SCRIPT_SANDBOXING: NO
     info:
       path: Wordsmoke/Info.plist
       properties:
@@ -39,6 +45,7 @@ targets:
           - UIInterfaceOrientationLandscapeLeft
           - UIInterfaceOrientationLandscapeRight
         ITSAppUsesNonExemptEncryption: false
+        NSGKFriendListUsageDescription: Wordsmoke uses your Game Center friends list to let you invite people you know.
     scheme:
       testTargets:
         - WordsmokeTests
@@ -46,6 +53,24 @@ targets:
     dependencies:
       - package: Amplitude-Swift
         product: AmplitudeSwift
+      - package: sentry-cocoa
+        product: Sentry
+    postBuildScripts:
+      - name: Upload Debug Symbols to Sentry
+        inputFiles:
+          - "$(DWARF_DSYM_FOLDER_PATH)/$(DWARF_DSYM_FILE_NAME)/Contents/Resources/DWARF/$(TARGET_NAME)"
+        script: |
+          # This script is responsible for uploading debug symbols and source context for Sentry.
+          if which sentry-cli >/dev/null; then
+            export SENTRY_ORG=akuaku
+            export SENTRY_PROJECT=apple-ios
+            ERROR=$(sentry-cli debug-files upload --include-sources "$DWARF_DSYM_FOLDER_PATH" 2>&1 >/dev/null)
+            if [ ! $? -eq 0 ]; then
+              echo "warning: sentry-cli - $ERROR"
+            fi
+          else
+            echo "warning: sentry-cli not installed, download from https://github.com/getsentry/sentry-cli/releases"
+          fi
   WordsmokeTests:
     type: bundle.unit-test
     platform: iOS
