--- a/project.yml
+++ b/project.yml
@@ -66,6 +66,11 @@ targets:
           - "$(DWARF_DSYM_FOLDER_PATH)/$(DWARF_DSYM_FILE_NAME)/Contents/Resources/DWARF/$(TARGET_NAME)"
         script: |
           # This script is responsible for uploading debug symbols and source context for Sentry.
+          if [ "${CONFIGURATION:-}" != "Release" ] || [ -z "${DWARF_DSYM_FOLDER_PATH:-}" ]; then
+            # Only upload for Release archives (Xcode Cloud / distribution builds)
+            echo "skipping! Configuration is ${CONFIGURATION}"
+            exit 0
+          fi
           if which sentry-cli >/dev/null; then
             export SENTRY_ORG=akuaku
             export SENTRY_PROJECT=apple-ios
