Tweak script to output better

--- a/project.yml
+++ b/project.yml
@@ -74,9 +74,10 @@ targets:
           if which sentry-cli >/dev/null; then
             export SENTRY_ORG=akuaku
             export SENTRY_PROJECT=apple-ios
-            ERROR=$(sentry-cli debug-files upload --include-sources "$DWARF_DSYM_FOLDER_PATH" 2>&1 >/dev/null)
-            if [ ! $? -eq 0 ]; then
-              echo "warning: sentry-cli - $ERROR"
+            OUTPUT=$(sentry-cli debug-files upload --include-sources "$DWARF_DSYM_FOLDER_PATH" 2>&1)
+            STATUS=$?
+            if [ $STATUS -ne 0 ]; then
+              echo "warning: sentry-cli failed ($STATUS): $OUTPUT"
             fi
           else
             echo "warning: sentry-cli not installed, download from https://github.com/getsentry/sentry-cli/releases"
